--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
   "dependencies": {
     "@primevue/themes": "^4.3.7",
     "bootstrap": "^5.3.7",
+    "pinia": "^3.0.3",
     "primevue": "^4.3.7",
     "vue": "^3.5.18",
     "vue-router": "^4.5.1"
